progress report (early)

--- a/4-puppy-raffle-audit/.notes.md
+++ b/4-puppy-raffle-audit/.notes.md
@@ -1,3 +1,7 @@
+# About
+
+  >About the project in my own words, `selectWinner` picks the winner, there is a raffle duration
+
 # high
 
 - found a DOS
